# uv_lib_sample

./: pyproject.toml
src/uv_lib_sample/: __init__.py
