[project]
name = "uv-lib-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "organic-nailer", email = "hykwyuk0125@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
