[project]
name = "uv-lib-sample"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "organic-nailer", email = "hykwyuk0125@gmail.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
